--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -72,10 +72,14 @@
 	border-bottom-right-radius: 5px;
 }
 
+.task_list {
+	width: 100%;
+}
+
 .task_container {
 	width: 100%;
-	height: 40px;
-	padding: 5px;
+	height: auto;
+	padding: 10px;
 	margin: 5px 0;
 	border-radius: 5px;
 	border: 1px solid #cb7cef;
@@ -84,6 +88,12 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+}
+
+.task_content {
+	display: flex;
+	align-items: center;
+	flex-grow: 1;
 }
 
 .check_box {
@@ -124,4 +134,13 @@
 	border-radius: 5px;
 	background-color: #cecbcb75;
 	color: #252525a4;
+}
+
+.task_due_date {
+  margin-right: 10px;
+  font-size: 14px;
+}
+
+.overdue {
+  color: red;
 }
